# Capstone-Project-Financial-Document-Insight-Agent

./: .gitignore  README.md  interfaces.tsx  next.config.js  package-lock.json  package.json  styles.tsx  tsconfig.json
app/: layout.module.css  layout.tsx  page.tsx
app/advanced-search/: page.tsx
app/chat/: PDFViewer.tsx  PageNumberDisplay.tsx  PageRenderer.tsx  chat.module.css  page.tsx
app/report-preview/: page.jsx  page.tsx
app/results-page/: page.tsx
app/saved-reports/: SavedReports.js  page.jsx
app/test/: page.tsx
backend/: durag.py  hash.py  main.py  pyproject.toml  rds.py
backend/sql_app/: crud.py  database.py  models.py  schemas.py
components/: DateDropdown.tsx  Footer.tsx  GlobalStyles.tsx  Header.tsx  PDFViewerModal.js  ReportPreviewFooter.tsx  RoundButton.tsx  RoundedDropdown.tsx  chat.module.css
frontend/: interfaces.tsx  next.config.js  package-lock.json  package.json  styles.tsx  tsconfig.json  utils.ts
frontend/app/: layout.module.css  layout.tsx  page.tsx
frontend/components/: DateDropdown.tsx  Footer.tsx  Header.tsx  Message.tsx  MultiSelectDropdown.tsx  ReportPreviewFooter.tsx  RoundButton.tsx  RoundedDropdown.tsx  SearchField.tsx  ThemeWrapper.tsx
frontend/utils/: date_utils.ts  rest_utils.ts  type_utils.ts
src/: AdvancedSearch.js  App.js  GlobalStyles.js  GlobalStyles.tsx  Home.js  MainLayout.js  PreviewPage.js  ReportPreview.js  ResultsPage.js  SavedReports.js  index.css  index.js
src/components/: DateDropdown.js  DateDropdown.tsx  Footer.js  Footer.tsx  Header.js  Header.tsx  ReportButton.js  ReportButton.tsx  (+8 more)
(+36 files in other folders)
